# np_exiv2_c

./: CMakeLists.txt  LICENSE
src/: log.h  np_exiv2_c.cpp  reader.cpp  reader.h
